--- a/Dockerfile.static
+++ b/Dockerfile.static
@@ -7,8 +7,11 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
+# Ensure we're using npm, not yarn
+RUN rm -f yarn.lock .yarnrc* || true
+
 # Install dependencies
-RUN npm ci
+RUN npm ci --no-audit --no-fund
 
 # Copy source code
 COPY . .
