Fix Docker workflow: Remove duplicate suffix in image inspection
The metadata action already includes the tag_suffix, so we shouldn't add it again
in the inspect step. This was causing 'main-static-static' instead of 'main-static'.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -138,7 +138,7 @@ jobs:
 
     - name: Inspect image
       run: |
-        docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}${{ matrix.variant.tag_suffix }}
+        docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
 
   update-description:
     runs-on: ubuntu-latest
